--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/carousel1.JPG
+    - assets/carousel2.JPG
+    - assets/carousel3.JPG
+    - assets/cats/cat1.png
+    - assets/cats/cat2.png
+    - assets/cats/cat3.png
+    - assets/cats/cat4.png
+    - assets/cats/cat5.png
+    - assets/cats/cat6.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
