--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/5star.png
     - assets/carousel1.JPG
     - assets/carousel2.JPG
     - assets/carousel3.JPG
@@ -55,6 +56,9 @@ flutter:
     - assets/cats/cat4.png
     - assets/cats/cat5.png
     - assets/cats/cat6.png
+    - assets/popular/burger.jpg
+    - assets/popular/pasta.jpg
+    - assets/popular/pizza.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
