--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ flutter:
     - assets/campaign/special3.jpg
     - assets/restaurants/rest1.jpg
     - assets/restaurants/rest2.jpg
+    - assets/new/new1.jpg
+    - assets/new/new2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
